  (Patch #534 - Matt Galligan) [Merged into 5.2.x]

- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to
  Metal. (Dale Anson) [Merged into 5.2.x]

- Fix for bug #3893 where PluginResURLConnection.openStream returning null for
  non existing resources made jEdit hang on Java 8, Mac OS 10.10. (Eric Le Lay)
  [Merged into 5.2.x]
}}}
{{{ UI Improvements

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection (Patch # 525 - Jakub Holý)

}}}
{{{ Miscellaneous

- HelpIndex includes .txt files again. (Bug #3896 - Alan Ezust)

- MiscUtilities.openInDesktop() works with URIs on Windows now. (Alan Ezust)
  [Merged into 5.2.x]

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Plugin Bug #1732 - Björn "Vampire" Kautler)

- Upgrade Launch4J to the latest version 3.5.0. This makes it possible to UTF-8
  encode the config file and build the EXE launcher on Mac OS again, removing
  the need for Rosetta being installed, which is not supported anymore anyway
  since Mac OS 10.7. (Björn "Vampire" Kautler)

}}}
{{{ API Changes

- View now sends ViewUpdate message on EditBus when full screen mode is toggled.
  This is useful to plugins that may need to adjust their appearance when the
  screen mode is toggled. (Dale Anson)

- PluginResURLConnection.openStream() is garanteed to return non-null stream;
  PluginResURLConnection.connect() and PluginResURLConnection.openStream()
  throw an IOException when the resource is not found. [Merged into 5.2.x]

}}}
{{{ Editing

  - Updates to cfscript mode (Patch #531 - Darien Brown)

  - New mode for ANS Forth 1994 (Patch #530 - Dibsco)
